# sync_highlights

./: Cargo.toml  build.rs  mise.toml
src/: cli.rs  import.rs  main.rs  models.rs  sync.rs
